<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include
            android:id="@+id/toolbar"
            layout="@layout/toolbar" />

        <TextView
            android:id="@+id/tv_album_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/album_name"
            android:textAllCaps="true"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_album_poster"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <TextView
            android:id="@+id/tv_artist_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/artist_name"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/iv_album_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_album_name" />

        <TextView
            android:id="@+id/tv_album_listeners_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:text="@string/album_listeners"
            android:textAllCaps="true"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintStart_toEndOf="@+id/iv_counter"
            app:layout_constraintTop_toBottomOf="@+id/tv_artist_name" />

        <ImageView
            android:id="@+id/iv_album_poster"
            android:layout_width="166dp"
            android:layout_height="205dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="168dp"
            android:contentDescription="@string/album_poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:srcCompat="@color/colorPrimaryDark" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_tracks"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tracks_label" />

        <Switch
            android:id="@+id/switch_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/switch_text"
            android:textSize="20sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintStart_toEndOf="@+id/iv_album_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_album_listeners_amount" />

        <ImageView
            android:id="@+id/iv_counter"
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:tint="@color/colorPrimary"
            android:contentDescription="@string/album_listeners"
            app:layout_constraintStart_toEndOf="@+id/iv_album_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_artist_name"
            app:srcCompat="@drawable/ic_hearing_black_24dp" />

        <TextView
            android:id="@+id/tracks_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/tracks"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/iv_album_poster" />

    </android.support.constraint.ConstraintLayout>
</ScrollView>