<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_artist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/artist_thumbnail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/album_poster" />

            <TextView
                android:id="@+id/artist_name"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="3dp"
                android:layout_marginTop="9dp"
                android:layout_toEndOf="@+id/artist_thumbnail"
                android:maxLines="2"
                android:text="@string/artist_name"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/artist_listeners"
                android:layout_width="224dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/artist_name"
                android:layout_marginStart="5dp"
                android:layout_marginTop="39dp"
                android:layout_toEndOf="@+id/artist_thumbnail"
                android:maxLines="2"
                android:text="@string/artist_listeners"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>