<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/linear_layout_artist"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:padding="5dp">

            <TextView
                android:id="@+id/track_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:maxLines="2"
                android:text="@string/track_name"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="normal|bold" />

            <TextView
                android:id="@+id/track_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/track_name"
                android:layout_marginStart="6dp"
                android:layout_marginTop="7dp"
                android:layout_toEndOf="@+id/track_duration_label"
                android:maxLines="2"
                android:text="@string/track_duration"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/track_duration_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/track_name"
                android:layout_alignParentStart="true"
                android:layout_marginStart="11dp"
                android:layout_marginTop="11dp"
                android:text="@string/track_duration_label" />

        </RelativeLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>