<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linear_layout_albums"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        card_view:cardCornerRadius="10dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/album_thumbnail"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/album_poster" />

            <TextView
                android:id="@+id/album_name"
                android:layout_width="230dp"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_toEndOf="@+id/album_thumbnail"
                android:maxLines="2"
                android:text="@string/album_name"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                android:textStyle="normal|bold"
                card_view:layout_constraintStart_toEndOf="@+id/album_thumbnail"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/album_listeners"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/album_name"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@+id/iv_play_counter"
                android:maxLines="2"
                android:text="@string/artist_listeners"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textSize="18sp"
                card_view:layout_constraintStart_toEndOf="@+id/iv_play_counter"
                card_view:layout_constraintTop_toBottomOf="@+id/album_name" />

            <ImageView
                android:id="@+id/iv_play_counter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/album_name"
                android:layout_marginStart="36dp"
                android:layout_marginTop="36dp"
                android:layout_toEndOf="@+id/album_thumbnail"
                android:tint="@color/colorPrimary"
                app:src="@drawable/ic_hearing_black_24dp"
                card_view:layout_constraintStart_toEndOf="@+id/album_thumbnail"
                card_view:layout_constraintTop_toBottomOf="@+id/album_name" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</LinearLayout>